# estrutura_workshop

./: LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/data/input/: Template Ratetable MG Claudio.xlsx  Template Ratetable MG Extrema.xlsx  Template Ratetable MG Heliodora.xlsx  Template Ratetable MG Lagoa da Prata.xlsx  Template Ratetable MG Manhuacu.xlsx  Template Ratetable MG Moema.xlsx  Template Ratetable MG Pedro Leopoldo.xlsx  Template Ratetable MG Sao Joao Manteninha.xlsx  Template Ratetable MG gov Valadares.xlsx  Template_ratetable_Birigui SP.xlsx  Template_ratetable_Campo Belo MG.xlsx  Template_ratetable_Caruaru PE.xlsx  Template_ratetable_Cascavel PR.xlsx  Template_ratetable_Embu_das_Artes_SP.xlsx  Template_ratetable_Fernandopolis_SP (1).xlsx  Template_ratetable_Fortaleza CE.xlsx
app/pipeline/: extract.py  load.py  transform.py
data/input/: Template Ratetable MG Baependi.xlsx  Template Ratetable MG Boa Esperanca.xlsx  Template Ratetable MG Campo do Meio.xlsx  Template Ratetable MG Conselheiro Lafaiete v1.xlsx  Template Ratetable MG Conselheiro Lafaiete.xlsx  Template Ratetable MG Itajuba.xlsx  Template Ratetable MG Mantena.xlsx  Template Ratetable MG Nova Resende.xlsx  Template Ratetable MG Visconde do Rio Branco.xlsx  Template Ratetable MG bom Jesus do Galho.xlsx  Template_ratetable_Alfenas MG.xlsx  Template_ratetable_Balsamo_SP.xlsx  Template_ratetable_Campo Grande MS.xlsx  Template_ratetable_Concordia SC.xlsx  Template_ratetable_Estrela_D_oeste_SP.xlsx  Template_ratetable_Goiania GO.xlsx
tests/: test_pipeline.py
