[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "meu projeto de etl"
authors = ["Reginaldo Cunha <reginaldo.cunhasj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
